# lc3tools_tui

./: .gitignore  MERGE_NOTES.md  bindings.cpp  pyproject.toml  readme.md  setup.py
.github/workflows/: build.yml  pages.yml
docs/: README.md  README_original.md
installer/: lc3asm_main.py  lc3pysim_main.py  lc3sim_main.py  lc3tools.wxs  pyinstaller_qt_hook.py  repair_wheel_linux.sh  repair_wheel_macos.sh
lc3py/: __init__.py  cli.py  lc3tui
programs/: profile.txt
python/: bindings.cpp
src/backend/: aliases.h  interface.cpp  interface.h  mem.h  state.cpp  state.h
src/cli/: asm_main.cpp  curs_main.cpp  sim_main.cpp
src/tui/: CMakeLists.txt  lc3tui  lc3tui.cpp
web/: index.html
web/css/: style.css
web/js/: assembler.js  disassembler.js  editor.js  lc3.js  main.js  objloader.js  os.js  ui.js
