[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lc3py"
version = "0.1.0"
description = "Python bindings for LC-3 Tools"
requires-python = ">=3.7"
dependencies = [ 'windows-curses ; platform_system == "Windows"', 'pygame-ce', 'numpy']

[project.scripts]
lc3asm = "lc3py.cli:lc3asm"
lc3sim = "lc3py.cli:lc3sim"
lc3pysim = "lc3py.cli:lc3pysim"