[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lc3sim"
version = "0.2.0"
description = "Python bindings for LC-3 Tools"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
lc3asm = "lc3py.cli:lc3asm"
lc3sim = "lc3py.cli:lc3sim"
lc3pysim = "lc3py.cli:lc3pysim"